fix: Snap align

--- a/raw/styles.scss
+++ b/raw/styles.scss
@@ -199,7 +199,7 @@ footer {
   padding-right: 2.5%;
   display: flex;
   align-items: center;
-  scroll-snap-align: center;
+  scroll-snap-align: start;
   &.minimal {
     display: block;
     min-height: auto;
